--- a/style/style.css
+++ b/style/style.css
@@ -425,7 +425,6 @@ body,
   background: transparent;
   border-bottom: 0.1rem solid var(--color-input-border);
   flex: 1;
-  color: white;
 }
 
 .contact__textarea {
@@ -468,7 +467,9 @@ html:has(.toggle__checkbox:checked),
   --color-input-border: var(--color-white);
   border-top: solid 0.1rem var(--color-white);
 }
-
+html:has(.toggle__checkbox:checked) .contact__input {
+  color: var(--color-white);
+}
 /* end theme compoent */
 /* responsive compoent */
 @media (max-width: 820px) {
